diesel_compile_tests/tests/fail/insertable_empty_struct.stderr
error: This derive can only be used on non-unit structs
  --> $DIR/insertable_empty_struct.rs:10:10
   |
10 | #[derive(Insertable)]
   |          ^^^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
